# uesave

./: .gitignore  Cargo.toml  about.toml
.github/workflows/: pages.yml
uesave/: Cargo.toml
uesave/examples/space-rig-decorator/: main.rs
uesave/src/: archive.rs  context.rs  lib.rs  serialization.rs  tests.rs
uesave_cli/: Cargo.toml
uesave_cli/src/: main.rs
uesave_wasm/: Cargo.toml
web/scripts/: generate-licenses.js
